Updated Less files

--- a/src/less/corporate-ui.less
+++ b/src/less/corporate-ui.less
@@ -1,6 +1,6 @@
 /*!
- * Scania Bootstrap
- * Maintained and Developed by CDS (Common Design Service)
+ * Corporate UI
+ * Maintained and Developed by IXCC : corporate-ui.slack.com
  */
 
  //Insert Compile Date
@@ -10,7 +10,6 @@
 @import url("https://static.scania.com/resources/logotype/scania/logotype-stylesheet/scania-logotype.css");
 
 // Import Fonts
-@import url("https://static.scania.com/resources/fonts/external_fonts.css");
 @import url("https://static.scania.com/resources/fonts/scania-sans/scania-fonts.css");
 //@import url("/css/fonts.css");
 
@@ -19,11 +18,8 @@
 @import url("https://static.scania.com/resources/icons/scania/icons.css");
 //@import url("/css/icons.css");
 
-@import url("brands.css");
+// @import url("brands.css");  THIS ONE IS NOT IN USE rather than this one: /resources/brands/js/apply-brand.js
 
-// This includes core bootstrap
-//@import url("/vendors/frameworks/bootstrap/3.2.0/css/bootstrap-org.css");
-//@import url("/libs/bootstrap/dist/css/bootstrap.css");
-
+         
 // Bootstrap related stuff
 @import url("core.css");
