--- a/src/less/corporate-ui/core.less
+++ b/src/less/corporate-ui/core.less
@@ -14,6 +14,7 @@
 @import 'mixins';
 @import 'common';
 @import 'buttons';
+@import 'button-groups';
 @import 'tables';
 @import 'pagination';
 @import 'badges-labels';
@@ -34,7 +35,10 @@
 @import 'notification';
 @import 'media-queries'; // Media Queries
 @import 'list-group';
+@import 'utilities/align';
+@import 'utilities/spacing';
 @import 'custom-classes/index';
+
 
 //-- End corporate ui components
 
