--- a/src/less/corporate-ui/custom-classes/env-marker.less
+++ b/src/less/corporate-ui/custom-classes/env-marker.less
@@ -23,22 +23,22 @@ body[data-env=demo]:before,
 body[data-env=proto]:before,
 body[data-env=development]:before,
 body[data-env^=beta]:before {
-  background-color: @brand-secondary-3;
+  background-color: @color-secondary-03;
   color: #fff;
 }
 
 body[data-env=sys]:before {
-  background-color: @brand-secondary-4;
+  background-color: @color-secondary-04;
   color: #fff;
 }
 
 body[data-env=acc]:before,
 body[data-env=pre]:before {
-  background-color: @brand-secondary-2;
+  background-color: @color-secondary-02;
   color: #fff;
 }
 body[data-env^="2"]:before {
-  background-color: @brand-primary;
+  background-color: @interaction-primary;
   color: #fff;
 }
 
