--- a/src/less/corporate-ui/custom-classes/general.less
+++ b/src/less/corporate-ui/custom-classes/general.less
@@ -1,3 +1,4 @@
+
 /*** NO WRAP ***/
 .no-wrap {
   white-space: nowrap !important;
@@ -10,6 +11,28 @@
 .h0neyp0t {
   display: none;
 }
+
+
+.light {
+
+  &,
+  section&,
+  > section,
+  section:nth-child(odd)& {
+    background-color: #fff;
+  }
+}
+
+.dark {
+
+  &,
+  section&,
+  > section,
+  section:nth-child(odd)& {
+    background-color: #eee;
+  }
+}
+
 
 .content-panel {
   background-color: #fff;
