--- a/src/less/corporate-ui/custom-classes/index.less
+++ b/src/less/corporate-ui/custom-classes/index.less
@@ -1,13 +1,14 @@
 @import 'colors';
+@import 'buttons';
 @import 'cursor';
 @import 'display';
 @import 'form';
 @import 'general';
+@import 'labels';
 @import 'lists';
 @import 'margins';
 @import 'paddings';
 @import 'tables';
-@import 'width';
 @import 'env-marker';
 @import 'angular';
 @import 'flex';
@@ -16,3 +17,5 @@
 @import 'notification';
 @import 'loading';
 @import 'image';
+@import 'page-header';
+@import 'select2';
