--- a/src/less/ux-library.less
+++ b/src/less/ux-library.less
@@ -11,7 +11,7 @@
     z-index: 9000;
     bottom: 40px;
     right: 40px;
-    background-color: #c50918;
+    background-color: #d6001c;
     color: #fff;
     font-size: 18px;
     padding: 10px 15px;
@@ -47,7 +47,7 @@
   .panel-group {
 
     a {
-      color: #c50918;
+      color: #d6001c;
     }
   }
 
