--- a/src/views/component/Listing Components/panel-grid/panel-grid.html
+++ b/src/views/component/Listing Components/panel-grid/panel-grid.html
@@ -232,7 +232,7 @@ Something equivelant to onload event? Update height when height on ready.
             &::after {
               font-family: 'corporate-icons';
                 content: "\e6e9";
-                color: #c50918;
+                color: #d6001c;
                 padding-left: 6px;
             }
           }
