--- a/src/views/template/Examples/login.html
+++ b/src/views/template/Examples/login.html
@@ -51,8 +51,8 @@
 <body class="scania">
 
   <c-login headline="Welcome to Scania" description="To log in to the resource you requested, please select your account type and submit your username and password in the form.">
-    <c-form-field type="text" name="username" label="Username"></c-form-field>
-    <c-form-field type="password" name="password" label="Password"></c-form-field>
+    <form-field type="text" name="username" label="Username"></form-field>
+    <form-field type="password" name="password" label="Password"></form-field>
   </c-login>
 
   <div id="start"></div>
