--- a/src/less/corporate-ui/badges-labels.less
+++ b/src/less/corporate-ui/badges-labels.less
@@ -2,88 +2,62 @@
 // BADGES & LABELS
 
 .badge {
-	cursor: default;
+  cursor: default;
 }
 
 .label {
-  font-size: 100%;
-  font-weight: normal;
-  border-radius: 1.25em;
-  padding: .4em .6em .3em;
+  font-size: 80%;
+  font-weight: bold;
+  border-radius: 1em;
+  padding: .6em 1.9em .7em;
   display: inline-block;
 }
 
-.label-sm {
-  font-size: 80%;  
+.label-xs {
+  font-size: 70%;  
+  font-weight: normal;  
   border-radius: 0.35em;
-  padding: 0.2em 0.4em 0.15em;
+  padding: 0.28em 0.4em 0.25em;
+}
+
+.label-sm {
+    font-size: 90%;
+    border-radius: 1em;
+    padding: 0.4em 0.6em;
+    font-family: 'Scania Sans Condensed Bold';
 }
 
 .label-lg {
+  font-size: 100%;
   font-weight: bold;
   border-radius: 1.3em;
-  padding: 0.8em 1.2em 0.6em;
-}
-
-.label-danger {
-  background-color: #f2dede;
-  color: #a94442;
-  border: 1px solid #d9aeae;
-}
-
-.label-primary {
-  background-color: #d9edf7;
-  color: #31708f;
-  border: 1px solid #9ecbd4;
-}
-
-.label-info {
-  color: @btn-info-color;
-  background-color: @btn-info-bg;
-  border: 1px solid darken(@btn-info-border, 4%);
+  padding: 0.6em 1.2em 0.6em;
 }
 
 .label-default {
-  background-color: #eee;
-  color: #545454;
-  border: 1px solid #d2d2d2;
+  background-color: #fff;
+  color: lighten(@interaction-primary-app, 10%);
+  border: 1px solid lighten(@interaction-primary-app, 10%);
+}
+
+.label-primary {
+  .label-mixin(primary);
+}
+
+.label-danger {
+  .label-mixin(danger);
+}
+
+.label-info {
+  .label-mixin(info);
 }
 
 .label-success {
-  background-color: #dff0d8;
-  color: #3c763d;
-  border: 1px solid #b8d2a2;
+  .label-mixin(success);
 }
 
 .label-warning {
-  background-color: #fcf8e3;
-  color: #8a6d3b;
-  border: 1px solid #d9c8a5;
-}
-
-// CRUD LABELS
-.label-delete {
-  background-color: #f2dede;
-  color: #a94442;
-  border: 1px solid #d9aeae;
-}
-
-.label-create {
-  background-color: #dff0d8;
-  color: #3c763d;
-  border: 1px solid #b8d2a2;
-}
-
-.label-update {
-  background-color: #fcf8e3;
-  color: #8a6d3b;
-  border: 1px solid #d9c8a5;
-}
-
-.label-read {
-  background-color: #d9edf7;
-  color: #31708f;
-  border: 1px solid #9ecbd4;
+  .label-mixin(warning);
 }
 
 .label.disabled,
@@ -92,8 +66,8 @@
 }
 
 // Badges
-.badge-primary { background-color: @brand-primary; }
-.badge-success { background-color: @brand-success; }
-.badge-info { background-color: @brand-info; }
-.badge-warning { background-color: @brand-warning; }
-.badge-danger { background-color: @brand-danger; }
+.badge-primary { background-color: @interaction-primary; }
+.badge-success { background-color: @interaction-success; }
+.badge-info { background-color: @interaction-info; }
+.badge-warning { background-color: @interaction-warning; }
+.badge-danger { background-color: @interaction-danger; }
