--- a/src/less/corporate-ui/button-groups.less
+++ b/src/less/corporate-ui/button-groups.less
@@ -1,17 +1,40 @@
 .btn-group {
 
+  &-vertical {
+
+    > .btn:first-child:not(:last-child) {
+      border-radius: 0;
+    }
+  }
+
   &.open .dropdown-toggle {
     box-shadow: none;
   }
 
    > .btn {
     border-radius: 0;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+  }
 
-    &:hover,
-    &:focus,
-    &:active,
+  //add all different types as a mixin like btn-primary
+  .btn-info {
+    color: #4a8ba4;
+    background-color: #fff;
+    border-color: #4a8ba4;
+
     &.active {
-      z-index: 0;
+      color: #fff;
+      background-color: #4a8ba4;
+      border-color: #4a8ba4;
+      -webkit-box-shadow: none;
+      box-shadow: none;
     }
   }
+}
+
+
+.btn-toolbar {
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
