--- a/src/less/corporate-ui/buttons.less
+++ b/src/less/corporate-ui/buttons.less
@@ -1,7 +1,8 @@
-@import (reference) 'variables';
-@import (reference) 'mixins';
 // SCANIA BOOTSTRAP THEME
 // Buttons
+
+@import (reference) 'variables';
+@import (reference) 'mixins';
 
 .btn {
   padding: 20px 40px;
@@ -32,7 +33,8 @@
     padding: 6px 12px;
   }
 
-  &-xs {
+  &-xs,
+  &-group-xs > & {
     font-size: 11px;
     padding: 3px 6px;
 
@@ -41,11 +43,12 @@
     }
   }
 
-  &-sm {
+  &-sm,
+  &-group-sm > & {
     font-size: 12px;
     padding: 7px 11px;
     // Icons in btn-sm
-    & [class^="icon-"], 
+    & [class^="icon-"],
     & [class*=" icon-"] {
       font-size: 14px;
       line-height: 13px;
@@ -56,7 +59,8 @@
     }
   }
 
-  &-lg {
+  &-lg,
+  &-group-lg > & {
     padding: 20px 40px;
     font-size: 14px;
     .app &{
@@ -73,20 +77,20 @@
   }
 
   &-success {
-     .btn-mix(success);
-  }
+   .btn-mix(success);
+ }
 
-  &-info {
-    .btn-mix(info);
-  }
+ &-info {
+  .btn-mix(info);
+}
 
-  &-warning {
-    .btn-mix(warning);
-  }
+&-warning {
+  .btn-mix(warning);
+}
 
-  &-danger {
-    .btn-mix(danger);
-  }
+&-danger {
+  .btn-mix(danger);
+}
 }
 
 // Buttons overrides
@@ -94,23 +98,50 @@
 
   &:hover,
   &:active,
-  &.active {
+  &.active,
+  .open .dropdown-toggle& {
     color: lighten(@btn-default-border, 10%);
     border-color: lighten(@btn-default-border, 10%);
     background-color: #f5f5f5;
   }
 }
-.app .btn-primary {
-  background-color: @brand-primary-app;
 
-  &:hover,
-  &:active,
-  &.active,
-  .open .dropdown-toggle& {
-    background-color: lighten(@brand-primary-app, 10%);
-    border-color: lighten(@brand-primary-app, 10%);
+
+.app {
+
+  .btn-link.btn-info {
+    color: @btn-info-bg;
+    text-decoration: none;
+    font-family: 'Scania Sans Condensed Bold';
+    font-size: 1.6rem;
+    background-color: transparent;
+    border: 0;
+
+    &:hover,
+    &:active,
+    &.active {
+      color: #6cabc3;
+      background-color: transparent;
+      border-color: transparent;
+    }
+  }
+
+  .btn-primary {
+    background-color: @interaction-primary-app;
+    border-color: @interaction-primary-app;
+
+    &:hover,
+    &:active,
+    &.active,
+    .open .dropdown-toggle& {
+      background-color: lighten(@interaction-primary-app, 10%);
+      border-color: lighten(@interaction-primary-app, 10%);
+    }
   }
 }
+
+
+
 // Button extra
 .btn-link  {
   font-weight: normal;
@@ -168,24 +199,3 @@ fieldset[disabled] .btn-link {
     text-decoration: none;
   }
 }
-
-
-
-// Andreas LESS checklist
-
-// .app .btn-group .btn {
-//       border-radius: 16px;
-//       border-color: #5da7a9;
-//       color: #5da7a9;      
-//   }
-
-// .app .btn-toolbar .btn-group button.btn.active {
-//       background-image: none;
-//       outline: 0;
-//       -webkit-box-shadow: none;
-//       box-shadow: none;
-//       color: #fff;
-//       background-color: #5da7a9;
-//       border-color: #5da7a9;
-//   }
-
