--- a/src/less/corporate-ui/common.less
+++ b/src/less/corporate-ui/common.less
@@ -1,11 +1,9 @@
 
 body {
   margin: 0;
+  height: 100vh;
   -webkit-print-color-adjust: exact;
 }
-/*body.modal-open { //Temporary fix before updating to new Boostrap-version
-  overflow: hidden;
-}*/
 
 h1, h2, h3, h4, h5, h6 {
   padding-top: 15px;
@@ -64,6 +62,12 @@ kbd {
   -webkit-border-radius: 3px;
   text-shadow: 0 1px 0 #fff;
 }
+
+.container-fluid {
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
 article {
 
   &.container,
@@ -114,25 +118,16 @@ body {
   }
 }
 
-/*.public,
-.app .public {
-  &:extend(body);
+@media (max-width: 1200px) {
 
-  h1, h2, h3, h4, h5, h6 {
-    &:extend(h6);
+  .container-fluid {
+    margin-left: 15px;
+    margin-right: 15px;  
   }
+}
 
-  h1 { &:extend(h1); }
-  h2 { &:extend(h2); }
-  h3 { &:extend(h3); }
-  h4 { &:extend(h4); }
-  h5 { &:extend(h5); }
-  h6 { &:extend(h6); }
-
-  h1 small { &:extend(h1 small); }
-  h2 small { &:extend(h2 small); }
-  h3 small { &:extend(h3 small); }
-  h4 small { &:extend(h4 small); }
-  h5 small { &:extend(h5 small); }
-  h6 small { &:extend(h6 small); }
-}*/
+@media (min-width: 1600px) {
+  .container {
+      max-width: 1400px;
+    }
+}
