--- a/src/less/corporate-ui/fonts.less
+++ b/src/less/corporate-ui/fonts.less
@@ -3,37 +3,61 @@
 
 @font-face {
   font-family: 'Open Sans';
-  src: url('open-sans-300.eot?#iefix') format('embedded-opentype'), url('open-sans-300.woff') format('woff'), url('open-sans-300.ttf') format('truetype'), url('open-sans-300.svg#svgFontName') format('svg');
+  src:
+    url('open-sans-300.eot?#iefix') format('embedded-opentype'),
+    url('open-sans-300.woff') format('woff'),
+    url('open-sans-300.ttf') format('truetype'),
+    url('open-sans-300.svg#svgFontName') format('svg');
   font-weight: 300;
   font-style: normal;
 }
 @font-face {
   font-family: 'Open Sans';
-  src: url('open-sans-400.eot?#iefix') format('embedded-opentype'), url('open-sans-400.woff') format('woff'), url('open-sans-400.ttf') format('truetype'), url('open-sans-400.svg#svgFontName') format('svg');
+  src:
+    url('open-sans-400.eot?#iefix') format('embedded-opentype'),
+    url('open-sans-400.woff') format('woff'),
+    url('open-sans-400.ttf') format('truetype'),
+    url('open-sans-400.svg#svgFontName') format('svg');
   font-weight: 400;
   font-style: normal;
 }
 @font-face {
   font-family: 'Open Sans';
-  src: url('open-sans-600.eot?#iefix') format('embedded-opentype'), url('open-sans-600.woff') format('woff'), url('open-sans-600.ttf') format('truetype'), url('open-sans-600.svg#svgFontName') format('svg');
+  src:
+    url('open-sans-600.eot?#iefix') format('embedded-opentype'),
+    url('open-sans-600.woff') format('woff'),
+    url('open-sans-600.ttf') format('truetype'),
+    url('open-sans-600.svg#svgFontName') format('svg');
   font-weight: 600;
   font-style: normal;
 }
 @font-face {
   font-family: 'Open Sans';
-  src: url('open-sans-600.eot?#iefix') format('embedded-opentype'), url('open-sans-600.woff') format('woff'), url('open-sans-600.ttf') format('truetype'), url('open-sans-600.svg#svgFontName') format('svg');
+  src:
+    url('open-sans-600.eot?#iefix') format('embedded-opentype'),
+    url('open-sans-600.woff') format('woff'),
+    url('open-sans-600.ttf') format('truetype'),
+    url('open-sans-600.svg#svgFontName') format('svg');
   font-weight: 600;
   font-style: 'italic';
 }
 @font-face {
   font-family: 'Open Sans';
-  src: url('open-sans-700.eot?#iefix') format('embedded-opentype'), url('open-sans-700.woff') format('woff'), url('open-sans-700.ttf') format('truetype'), url('open-sans-700.svg#svgFontName') format('svg');
+  src: 
+    url('open-sans-700.eot?#iefix') format('embedded-opentype'),
+    url('open-sans-700.woff') format('woff'),
+    url('open-sans-700.ttf') format('truetype'),
+    url('open-sans-700.svg#svgFontName') format('svg');
   font-weight: 700;
   font-style: normal;
 }
 @font-face {
   font-family: 'Open Sans Condensed';
-  src: url('open-sans-700-condensed.eot?#iefix') format('embedded-opentype'), url('open-sans-700-condensed.woff') format('woff'), url('open-sans-700-condensed.ttf') format('truetype'), url('open-sans-700-condensed.svg#svgFontName') format('svg');
+  src:
+    url('open-sans-700-condensed.eot?#iefix') format('embedded-opentype'), 
+    url('open-sans-700-condensed.woff') format('woff'), 
+    url('open-sans-700-condensed.ttf') format('truetype'), 
+    url('open-sans-700-condensed.svg#svgFontName') format('svg');
   font-weight: 700;
   font-style: normal;
 }
@@ -45,12 +69,13 @@
   font-style: normal;
   font-weight: 300;
   src: url('open-sans-v13-latin-ext-300.eot'); /* IE9 Compat Modes */
-  src: url('open-sans-v13-latin-ext-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('open-sans-v13-latin-ext-300.woff2') format('woff2'), /* Super Modern Browsers */
-       url('open-sans-v13-latin-ext-300.woff') format('woff'), /* Modern Browsers */
-       url('open-sans-v13-latin-ext-300.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('open-sans-v13-latin-ext-300.svg#OpenSans') format('svg'); /* Legacy iOS */
-       unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF; 
+  src:
+    url('open-sans-v13-latin-ext-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('open-sans-v13-latin-ext-300.woff2') format('woff2'), /* Super Modern Browsers */
+    url('open-sans-v13-latin-ext-300.woff') format('woff'), /* Modern Browsers */
+    url('open-sans-v13-latin-ext-300.ttf') format('truetype'), /* Safari, Android, iOS */
+    url('open-sans-v13-latin-ext-300.svg#OpenSans') format('svg'); /* Legacy iOS */
+  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF; 
 }
 /* open-sans-regular - latin-ext */
 @font-face {
@@ -59,12 +84,14 @@
   font-weight: 400;
   unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
   src: url('open-sans-v13-latin-ext-regular.eot'); /* IE9 Compat Modes */
-  src: local('Open Sans'), local('OpenSans'),
-       url('open-sans-v13-latin-ext-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('open-sans-v13-latin-ext-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('open-sans-v13-latin-ext-regular.woff') format('woff'), /* Modern Browsers */
-       url('open-sans-v13-latin-ext-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('open-sans-v13-latin-ext-regular.svg#OpenSans') format('svg'); /* Legacy iOS */
+  src:
+    local('Open Sans'),
+    local('OpenSans'),
+    url('open-sans-v13-latin-ext-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('open-sans-v13-latin-ext-regular.woff2') format('woff2'), /* Super Modern Browsers */
+    url('open-sans-v13-latin-ext-regular.woff') format('woff'), /* Modern Browsers */
+    url('open-sans-v13-latin-ext-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+    url('open-sans-v13-latin-ext-regular.svg#OpenSans') format('svg'); /* Legacy iOS */
 }
 /* open-sans-600 - latin-ext */
 @font-face {
@@ -73,12 +100,14 @@
   font-weight: 600;
   unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
   src: url('open-sans-v13-latin-ext-600.eot'); /* IE9 Compat Modes */
-  src: local('Open Sans Semibold'), local('OpenSans-Semibold'),
-       url('open-sans-v13-latin-ext-600.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('open-sans-v13-latin-ext-600.woff2') format('woff2'), /* Super Modern Browsers */
-       url('open-sans-v13-latin-ext-600.woff') format('woff'), /* Modern Browsers */
-       url('open-sans-v13-latin-ext-600.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('open-sans-v13-latin-ext-600.svg#OpenSans') format('svg'); /* Legacy iOS */
+  src:
+    local('Open Sans Semibold'),
+    local('OpenSans-Semibold'),
+    url('open-sans-v13-latin-ext-600.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('open-sans-v13-latin-ext-600.woff2') format('woff2'), /* Super Modern Browsers */
+    url('open-sans-v13-latin-ext-600.woff') format('woff'), /* Modern Browsers */
+    url('open-sans-v13-latin-ext-600.ttf') format('truetype'), /* Safari, Android, iOS */
+    url('open-sans-v13-latin-ext-600.svg#OpenSans') format('svg'); /* Legacy iOS */
 }
 /* open-sans-600italic - latin-ext */
 @font-face {
@@ -87,12 +116,14 @@
   font-weight: 600;
   unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
   src: url('open-sans-v13-latin-ext-600italic.eot'); /* IE9 Compat Modes */
-  src: local('Open Sans Semibold Italic'), local('OpenSans-SemiboldItalic'),
-       url('open-sans-v13-latin-ext-600italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('open-sans-v13-latin-ext-600italic.woff2') format('woff2'), /* Super Modern Browsers */
-       url('open-sans-v13-latin-ext-600italic.woff') format('woff'), /* Modern Browsers */
-       url('open-sans-v13-latin-ext-600italic.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('open-sans-v13-latin-ext-600italic.svg#OpenSans') format('svg'); /* Legacy iOS */
+  src:
+    local('Open Sans Semibold Italic'),
+    local('OpenSans-SemiboldItalic'),
+    url('open-sans-v13-latin-ext-600italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('open-sans-v13-latin-ext-600italic.woff2') format('woff2'), /* Super Modern Browsers */
+    url('open-sans-v13-latin-ext-600italic.woff') format('woff'), /* Modern Browsers */
+    url('open-sans-v13-latin-ext-600italic.ttf') format('truetype'), /* Safari, Android, iOS */
+    url('open-sans-v13-latin-ext-600italic.svg#OpenSans') format('svg'); /* Legacy iOS */
 }
 /* open-sans-700 - latin-ext */
 @font-face {
@@ -101,12 +132,14 @@
   font-weight: 700;
   unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
   src: url('open-sans-v13-latin-ext-700.eot'); /* IE9 Compat Modes */
-  src: local('Open Sans Bold'), local('OpenSans-Bold'),
-       url('open-sans-v13-latin-ext-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('open-sans-v13-latin-ext-700.woff2') format('woff2'), /* Super Modern Browsers */
-       url('open-sans-v13-latin-ext-700.woff') format('woff'), /* Modern Browsers */
-       url('open-sans-v13-latin-ext-700.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('open-sans-v13-latin-ext-700.svg#OpenSans') format('svg'); /* Legacy iOS */
+  src:
+    local('Open Sans Bold'),
+    local('OpenSans-Bold'),
+    url('open-sans-v13-latin-ext-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('open-sans-v13-latin-ext-700.woff2') format('woff2'), /* Super Modern Browsers */
+    url('open-sans-v13-latin-ext-700.woff') format('woff'), /* Modern Browsers */
+    url('open-sans-v13-latin-ext-700.ttf') format('truetype'), /* Safari, Android, iOS */
+    url('open-sans-v13-latin-ext-700.svg#OpenSans') format('svg'); /* Legacy iOS */
 }
 
 /* open-sans-condensed-700 - latin-ext */
@@ -115,12 +148,14 @@
   font-style: normal;
   font-weight: 700;
   src: url('open-sans-condensed-v10-latin-ext-700.eot'); /* IE9 Compat Modes */
-  src: local('Open Sans Condensed Bold'), local('OpenSans-CondensedBold'),
-       url('open-sans-condensed-v10-latin-ext-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('open-sans-condensed-v10-latin-ext-700.woff2') format('woff2'), /* Super Modern Browsers */
-       url('open-sans-condensed-v10-latin-ext-700.woff') format('woff'), /* Modern Browsers */
-       url('open-sans-condensed-v10-latin-ext-700.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('open-sans-condensed-v10-latin-ext-700.svg#OpenSansCondensed') format('svg'); /* Legacy iOS */
+  src:
+    local('Open Sans Condensed Bold'),
+    local('OpenSans-CondensedBold'),
+    url('open-sans-condensed-v10-latin-ext-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('open-sans-condensed-v10-latin-ext-700.woff2') format('woff2'), /* Super Modern Browsers */
+    url('open-sans-condensed-v10-latin-ext-700.woff') format('woff'), /* Modern Browsers */
+    url('open-sans-condensed-v10-latin-ext-700.ttf') format('truetype'), /* Safari, Android, iOS */
+    url('open-sans-condensed-v10-latin-ext-700.svg#OpenSansCondensed') format('svg'); /* Legacy iOS */
 }
 
 /* open-sans-800 - latin-ext */
@@ -130,16 +165,15 @@
   font-weight: 800;
   unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
   src: url('open-sans-v13-latin-ext-800.eot'); /* IE9 Compat Modes */
-  src: local('Open Sans Extrabold'), local('OpenSans-Extrabold'),
-       url('open-sans-v13-latin-ext-800.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('open-sans-v13-latin-ext-800.woff2') format('woff2'), /* Super Modern Browsers */
-       url('open-sans-v13-latin-ext-800.woff') format('woff'), /* Modern Browsers */
-       url('open-sans-v13-latin-ext-800.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('open-sans-v13-latin-ext-800.svg#OpenSans') format('svg'); /* Legacy iOS */
+  src:
+    local('Open Sans Extrabold'),
+    local('OpenSans-Extrabold'),
+    url('open-sans-v13-latin-ext-800.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('open-sans-v13-latin-ext-800.woff2') format('woff2'), /* Super Modern Browsers */
+    url('open-sans-v13-latin-ext-800.woff') format('woff'), /* Modern Browsers */
+    url('open-sans-v13-latin-ext-800.ttf') format('truetype'), /* Safari, Android, iOS */
+    url('open-sans-v13-latin-ext-800.svg#OpenSans') format('svg'); /* Legacy iOS */
 }
-
-
-
 
 // (font-awesome.css)
 
@@ -147,7 +181,7 @@
  *  Importing Scanic Corporate Icons including Font Awesome version 3.2.1
  */
 /* FONT PATH
- * -------------------------- */
+* -------------------------- */
 
 //@import url("//static.scania.com/resources/fonts/corporate-icons/style.css");
 
@@ -155,16 +189,16 @@
  * Additional Classes not rendered by IcoMoon where Scania Corporate Icons are created, maintained and hosted.
  /* FONT AWESOME CORE
  * -------------------------- */
-[class^="icon-"],
-[class*=" icon-"] {
+ [class^="icon-"],
+ [class*=" icon-"] {
    font-weight: normal;
-  font-style: normal;
-  text-decoration: inherit;
-  -webkit-font-smoothing: antialiased;
-  *margin-right: .3em;
-}
-[class^="icon-"]:before,
-[class*=" icon-"]:before {
+   font-style: normal;
+   text-decoration: inherit;
+   -webkit-font-smoothing: antialiased;
+   *margin-right: .3em;
+ }
+ [class^="icon-"]:before,
+ [class*=" icon-"]:before {
   text-decoration: inherit;
   display: inline-block;
   speak: none;
@@ -301,7 +335,7 @@ a [class*=" icon-"] {
 }
 
 .icon-extreme {
-font-size: 50em !important;
+  font-size: 50em !important;
 }
 
 .pull-right {
@@ -319,7 +353,7 @@ font-size: 50em !important;
   margin-left: .3em;
 }
 /* BOOTSTRAP SPECIFIC CLASSES
- * -------------------------- */
+* -------------------------- */
 /* Bootstrap 2.0 sprites.less reset */
 [class^="icon-"],
 [class*=" icon-"] {
@@ -412,7 +446,7 @@ font-size: 50em !important;
   line-height: inherit;
 }
 /* EXTRAS
- * -------------------------- */
+* -------------------------- */
 /* Stacked and layered icon */
 .icon-stack {
   position: relative;
