--- a/src/less/corporate-ui/mixins.less
+++ b/src/less/corporate-ui/mixins.less
@@ -29,3 +29,36 @@
       border-color: lighten(@@bg, 10%);
     }
 }
+
+.panel-mixin(@type) {
+  @color-panel: 'interaction-@{type}';
+  border-color: @@color-panel;
+
+  > .panel-heading,
+  > .panel-footer {
+      color:white;
+      background-color: @@color-panel;
+      border-color: inherit;
+  }
+
+  .table {
+
+    caption {
+      background-color: @@color-panel;
+    }
+  }
+}
+
+.label-mixin(@type) {
+  @color-label: 'interaction-@{type}';
+
+  background-color: lighten(@@color-label, 10%);
+  color: #fff;
+  border: 1px solid lighten(@@color-label, 10%);
+}
+
+.icon-mixin(@icon @content) {
+  .@{icon}:before {
+    content: @content;
+  }
+}
