--- a/src/less/corporate-ui/panels-wells.less
+++ b/src/less/corporate-ui/panels-wells.less
@@ -1,258 +1,275 @@
-  // SCANIA BOOTSTRAP THEME
-  // PANELS AND WELLS
-  .panel {
-      margin-bottom: 15px;
-      border-radius: 0;
-      -webkit-box-shadow: none;
-      box-shadow: none;
-      overflow: hidden;
-      &-heading {
-          border-radius: 0;
-          font-family: 'Scania Sans Bold';
-          text-transform: uppercase;
-          h1,
-          h2,
-          h3,
-          h4,
-          h5,
-          h6 {
-              font-family: 'Scania Sans Headline Bold';
-              padding: 4px 0;
-              margin: 0;
-              letter-spacing: 0.03rem;
-              color: white;
-          }
-          // Icons in panel-heading
-          [class^="icon-"],
-          [class*=" icon-"] {
-              font-size: 14px;
-          }
-      }
-      &-title {
-          font-family: 'Scania Sans Headline Bold';
-          color: inherit;
-          font-size: 1.8rem;
+// SCANIA BOOTSTRAP THEME
+// PANELS AND WELLS
 
-        small {
-          display: block;
-          margin: 4px 0;
-          font-size: 0.75em;
-          font-family: 'Scania Sans';
-          text-transform: initial;
-          color: inherit;
-        }
-      }
-      & &-body {
-          > .table {
-              margin: -16px;
-          }
-      }
-      &-footer {
-          font-weight: bold;
-          border-radius: 0;
-      }
-      &-inverse {
-              // &:extend(.panel-heading);
-          background-color: @dark-content-block;
-          border: 0px;
-          color: inherit;
-          // margin-bottom: 0px;
+.panel {
+  margin-bottom: 15px;
+  border-radius: 0;
+  -webkit-box-shadow: none;
+  box-shadow: none;
 
-          &:first-child {
-            border: 1px solid #ddd;
-          }
+  .panel-heading {
+    border-radius: 0;
+    font-family: 'Scania Sans Bold';
+    text-transform: uppercase;
 
-          &:first-child .panel-heading{
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      font-family: 'Scania Sans Headline Bold';
+      padding: 4px 0;
+      margin: 0;
+      letter-spacing: 0.03rem;
+      color: white;
+    }
 
-             background-color: #FFFFFF;
-             color: #041e42;
-             border: 1px solid #ddd;
+    h3 {
+      font-size: 1.7rem;
+      letter-spacing:0.05rem;
+    }
 
-             :first-child {
-              color: #041e42;
+    // Icons in panel-heading
+    [class^="icon-"],
+    [class*=" icon-"] {
+      font-size: 14px;
+    }
 
-          }
+    + .panel-body {
+      padding: 15px;
+    }
+  }
 
-      }
-      input[type=text] {
-          background-color: #fff;
-      }
+  .panel-title {
+    color: inherit;
+    font-size: 1.8rem;
 
-           
+    small {
+      display: block;
+      margin: 4px 0;
+      font-size: 0.75em;
+      font-family: 'Scania Sans';
+      text-transform: initial;
+      color: inherit;
+    }
+  }
 
-          .form-control {
-              border: 0px;
-          }
+  .panel-body {
+    padding: 30px 40px;
 
+    h3 {
+      font-family: 'Scania Sans Condensed Bold';
+      font-size: 23px;
+      padding-top: 5px;
+      color: #041e42;
+    }
 
-      }
+    h4 {
+      font-family: 'Scania Sans Condensed Bold';
+      color: #4a8ba4;
+      margin-top: 0;
+      margin-bottom: 20px;
+    }
 
-      // panel-onlyheading - Panels with just heading, transparent panel-body
-      &&-onlyheading {
+    p {
+      font-size: 16px;
+    }
+
+    .table {
+
+      &.table-sm {
+        max-width: 100%;
+        margin: 20px 0;
+
+        thead {
           background-color: transparent;
-          &, > &-heading {
-              -webkit-border-radius: 0px;
-              -moz-border-radius: 0px;
-              border-radius: 0px;
+          color: #b7b7b7;
+
+          > tr {
+
+            > th {
+              text-transform: none;
+              font-weight: normal;
+              font-family: 'Scania Sans Condensed Bold';
+              font-size: 1.3rem;
+              padding: 0 10px;
+              border-bottom: 1px solid #b7b7b7;
+            }
           }
-      }
-      .panel-body {
-          > .table {
-              display: block;
-              width: auto;
-              max-width: none;
-              margin: -1px;
-              caption {
-                  display: block;
-              }
-              thead {
-                  background-color: inherit;
-                  color: inherit;
-              }
-              > thead,
-              > tbody {
-                  display: inline-table;
-                  width: 100%;
-              }
-              th,
-              td {
-                  width: 1%;
-              }
-          }
-      }
-      .panel-footer {
-          > .pagination {
-              margin: 0;
-          }
-      }
-      .table-borderless > {
-          tbody,
-          thead {
-              > tr > {
-                  td,
-                  th {
-                      border: none;
-                  }
-              }
-          }
-      }
-  }
-  // Contextual footers (missing support in Bootstrap)
-  .panel-default {
-      border-color: @brand-default;
-      > .panel-heading, > .panel-footer {
-          color: @brand-primary;
-          h1,
-          h2,
-          h3,
-          h4,
-          h5, 
-          h6 {
-              color: inherit;
-          }
-      }
-  }
-  .panel-primary {
-      border-color: @brand-primary;
-      > .panel-heading, > .panel-footer {
-          color: #ffffff;
-          background-color: @brand-primary;
-          border-color: @brand-primary;
-      }
-      .table caption {
-          background-color: @brand-primary;
-      }
-  }
-  .panel-info {
-      border-color: @brand-info;
-      > .panel-heading, > .panel-footer {
-          color: #ffffff;
-          background-color: @brand-info;
-          border-color: @brand-info;
-      }
-      .table caption {
-          background-color: @brand-info;
-      }
-  }
-  .panel-success {
-      border-color: @brand-success;
-      > .panel-heading, > .panel-footer {
-          color: #ffffff;
-          background-color: @brand-success;
-          border-color: @brand-success;
-      }
-      .table caption {
-          background-color: @brand-success;
-      }
-  }
-  .panel-warning {
-      border-color: @brand-warning;
-      > .panel-heading, > .panel-footer {
-          color: #ffffff;
-          background-color: @brand-warning;
-          border-color: @brand-warning;
-      }
-      .table caption {
-          background-color: @brand-warning;
-      }
-  }
-  .panel-danger {
-      border-color: @brand-danger;
-      > .panel-heading, > .panel-footer {
-          color: #ffffff;
-          background-color: @brand-danger;
-          border-color: @brand-danger;
-      }
-      .table caption {
-          background-color: @brand-danger;
-      }
-  }
-
-  //wells
-  .well {
-    background-color: @dark-content-block;
-    border-radius: 0px;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-    border: 0;
-
-  
-    input[type="text"] {
-
-     
-        background-color: #FFFFFF;
-        border: 0;
-        border-radius: 0;
-        box-shadow: none;
-        font-size: inherit;
-        font-weight: normal;
-
-       
-      &:disabled {
-
-        background-color: #dfdee1;
-        color: #a1a1a1;
-        cursor: default;
-    
-      }
-
-      &:read-only {
-
-        background-color: transparent;
-        cursor: default;
-        &:focus {
-            cursor: default;
-            box-shadow: none;
         }
-    
+
+        tbody {
+
+          > tr {
+
+            > td {
+              font-family: 'Scania Sans Condensed';
+              padding: 5px 10px;
+              border: none;
+              font-size: 1.3rem;
+            }
+          }
+        }
+
+        &.table-striped {
+
+          > tbody {
+
+            > tr {
+
+              &:nth-child(odd) {
+
+                > td,
+                > th {
+                  background-color: #fff;
+                }
+              }
+
+              &:nth-child(even) {
+
+                > td,
+                > th {
+                  background-color: #f2f7f9;
+                }
+              }
+            }
+          }
+        }
       }
     }
   }
 
-  .jumbotron h1, .jumbotron .h1 {
-    color: @brand-primary;
+  .panel-footer {
+    font-weight: bold;
+    border-radius: 0;
   }
 
-  header.c-page-header {
-    background: #fff;
+  //Panel-inverse
+  &-inverse {
+    background-color: @dark-content-block;
+    border: 0px;
+    color: inherit;
+
+    &:first-child {
+      border: 1px solid #ddd;
+    }
+
+    &:first-child .panel-heading {
+     background-color: #FFFFFF;
+     color: #041e42;
+     border: 1px solid #ddd;
+
+     :first-child {
+      color: #041e42;
+    }
   }
+
+  input[type=text] {
+    background-color: #fff;
+  }
+
+  .form-control {
+    border: 0px;
+  }
+}
+
+  // panel-onlyheading - Panels with just heading, transparent panel-body
+  &&-onlyheading {
+    background-color: transparent;
+
+    &,
+    > &-heading {
+      -webkit-border-radius: 0px;
+      -moz-border-radius: 0px;
+      border-radius: 0px;
+    }
+  }
+
+  .panel-footer {
+
+    > .pagination {
+      margin: 0;
+
+    }
+  }
+
+  .app & {
+
+    h1,h2,h3 {
+      letter-spacing: 0.05rem;
+    }
+  }
+}
+
+// Contextual footers (missing support in Bootstrap)
+.panel-default {
+  border-color: @interaction-default;
+
+  > .panel-heading, > .panel-footer {
+    color: @interaction-primary;
+
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      color: inherit;
+    }
+  }
+}
+
+.panel-primary {
+  .panel-mixin(primary);
+}
+
+.panel-info {
+  .panel-mixin(info);
+}
+
+.panel-success {
+  .panel-mixin(success);
+}
+
+.panel-warning {
+  .panel-mixin(warning);
+}
+
+.panel-danger {
+  .panel-mixin(danger);
+}
+
+//wells
+.well {
+  background-color: @dark-content-block;
+  border-radius: 0px;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  border: 0;
+
+  input {
+    background-color: #FFFFFF;
+
+    &:disabled {
+      background-color: #dfdee1;
+      color: #a1a1a1;
+      cursor: default;
+    }
+
+    &:read-only {
+      background-color: transparent;
+      cursor: default;
+
+      &:focus {
+        cursor: default;
+        box-shadow: none;
+      }
+    }
+  }
+}
+
+.jumbotron h1,
+.jumbotron .h1 {
+  color: @interaction-primary;
+}
