--- a/src/less/corporate-ui/progressbars.less
+++ b/src/less/corporate-ui/progressbars.less
@@ -1,9 +1,9 @@
 // SCANIA BOOTSTRAP THEME
 // PROGRESSBARS
 
-.progress-bar { background-color: @brand-primary; }
-.progress-bar-primary { background-color: @brand-primary; }
-.progress-bar-success { background-color: @brand-success; }
-.progress-bar-info { background-color: @brand-info; }
-.progress-bar-warning { background-color: @brand-warning; }
-.progress-bar-danger { background-color: @brand-danger; }
+.progress-bar { background-color: @interaction-primary; }
+.progress-bar-primary { background-color: @interaction-primary; }
+.progress-bar-success { background-color: @interaction-success; }
+.progress-bar-info { background-color: @interaction-info; }
+.progress-bar-warning { background-color: @interaction-warning; }
+.progress-bar-danger { background-color: @interaction-danger; }
