--- a/src/views/component.html
+++ b/src/views/component.html
@@ -1,66 +1,73 @@
-
 <!DOCTYPE html>
-
 <html lang="en-GB">
-<head>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
-  <meta charset="utf-8">
-  <noscript>
-    <meta http-equiv="refresh" content="0;url=https://static.scania.com/vendors/components/pure-js/nonJS-browsers/1.0.0/nonJS-browsers.html">
-  </noscript>
+  <head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+    <meta charset="utf-8">
+    <noscript>
+      <meta http-equiv="refresh" content="0;url=https://static.scania.com/vendors/components/pure-js/nonJS-browsers/1.0.0/nonJS-browsers.html">
+    </noscript>
 
-  <title>Corporate UI - Developers</title>
+    <title>Corporate UI - Developers</title>
 
-  <script src="/js/corporate-ui.js"></script>
+    <script src="/js/corporate-ui.js"></script>
 
-  <link rel="import" href="/scania-doc/scania-doc.html">
-  <link rel="stylesheet" href="/css/ux-library.css">
-</head>
-<body class="scania ux-lib" data-env="dev">
-
-  <c-corporate-header site-name="Developers" site-url="/">
-    <nav-item location="https://github.scania.com/pages/Scania/ux-library/">UX Library</nav-item>
-    <nav-item location="https://github.scania.com/scania/corporate-ui">Scania GitHub</nav-item>
-  </c-corporate-header>
-    
-  <c-main-content>
-
-     <c-main-navigation>
-      <primary-items>
-        <nav-item location="/">Home</nav-item> 
-        <nav-item location="/development.html" class="active">Development
-          <sub-navigation caption="Development">
-            <nav-item location="/components.html">Components</nav-item>
-            <nav-item location="/templates.html">Templates</nav-item>
-          </sub-navigation>
-        </nav-item>
-        <nav-item location="/testing.html">Testing</nav-item>
-        <nav-item location="https://github.scania.com/Scania/corporate-ui/issues/new">Report an Issue</nav-item>
-        <nav-item location="https://github.scania.com/pages/Scania/ux-library/developer/support.html">Support</nav-item>
-      </primary-items>
-    </c-main-navigation>
-
-    <scania-doc></scania-doc>
-
-  </c-main-content>
-
-  <c-corporate-footer></c-corporate-footer>
-
-  <script src="/vendors/frameworks/jQuery/2.2.2/dist/jquery.js"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110069805-1"></script>
   <script>
-    var html_root = '/html/component',
-        category = CorporateUi.getUrlParameter('t'),
-        component = CorporateUi.getUrlParameter('c'),
-        path = [html_root, category, component, component].join('/') + '.html';
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-    if ($('link[href$="' + component + '.html"]').length === 0) {
-      CorporateUi.importLink(path, 'import');
-    }
-
-    $('scania-doc').attr('for', CorporateUi.getUrlParameter('c'));
-    $('scania-doc').attr('src', path);
+    gtag('config', 'UA-110069805-1');
   </script>
+  
+  <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
+    <link rel="import" href="/scania-doc/scania-doc.html">
+    <link rel="stylesheet" href="/css/ux-library.css">
+  </head>
+  <body class="scania ux-lib" data-env="dev">
 
-  <script src="/js/ux-library.js"></script>
-</body>
+    <c-corporate-header site-name="Developers" site-url="/">
+      <nav-item location="https://github.scania.com/pages/Scania/ux-library/">UX Library</nav-item>
+      <nav-item location="https://github.scania.com/scania/corporate-ui">Scania GitHub</nav-item>
+    </c-corporate-header>
+
+    <c-main-content>
+      <c-main-navigation>
+        <primary-items>
+          <nav-item location="/">Home</nav-item> 
+          <nav-item location="/development.html" class="active">Development
+            <sub-navigation caption="Development">
+              <nav-item location="/components.html">Components</nav-item>
+              <nav-item location="/templates.html">Templates</nav-item>
+            </sub-navigation>
+          </nav-item>
+          <nav-item location="/testing.html">Testing</nav-item>
+          <nav-item location="https://github.scania.com/Scania/corporate-ui/issues/new">Report an Issue</nav-item>
+          <nav-item location="https://github.scania.com/pages/Scania/ux-library/developer/support.html">Support</nav-item>
+        </primary-items>
+      </c-main-navigation>
+      <scania-doc></scania-doc>
+    </c-main-content>
+
+    <c-corporate-footer></c-corporate-footer>
+
+    <script src="/vendors/frameworks/jQuery/2.2.2/dist/jquery.min.js"></script>
+
+    <script>
+      var html_root = '/html/component',
+      category = CorporateUi.getUrlParameter('t'),
+      component = CorporateUi.getUrlParameter('c'),
+      path = [html_root, category, component, component].join('/') + '.html';
+
+      if ($('link[href$="' + component + '.html"]').length === 0) {
+        CorporateUi.importLink(path, 'import');
+      }
+
+      $('scania-doc').attr('for', CorporateUi.getUrlParameter('c'));
+      $('scania-doc').attr('src', path);
+    </script>
+
+    <script src="/js/ux-library.js"></script>
+  </body>
 </html>
