--- a/src/views/component/Bootstrap/navbar/nav-item/style.less
+++ b/src/views/component/Bootstrap/navbar/nav-item/style.less
@@ -6,85 +6,109 @@
   display: inline-block;
 }
 
-:host-context(c-corporate-header) a {
-  text-transform: uppercase;
+:host-context(c-corporate-header) {
 
-  // Bootstrap
-  &:extend(.nav > li > a);
-  &:extend(.navbar-default .navbar-header .navbar-nav a);
-
-  // Corporate-ui
-  &:extend(.navbar-nav > li > a);
-}
-
-:host-context(c-main-navigation) {
-
-  &:not(:first-child) a {
-    &:extend(.navbar-default .navbar-nav > li + li > a all);
-  }
-
-  a {
+  ::content a {
     text-transform: uppercase;
 
     // Bootstrap
     &:extend(.nav > li > a);
+    &:extend(.navbar-default .navbar-header .navbar-nav a);
 
     // Corporate-ui
     &:extend(.navbar-nav > li > a);
-    &:extend(.navbar-default .navbar-nav > li > a all);
-    &:extend(.navbar-default .navbar-header + .navbar-collapse .navbar-nav a all);
+  }
+}
 
-    &.mode-toggler {
-      display: none;
+:host-context(c-main-navigation) {
+
+  ::content {
+
+    + nav-item a {
+      &:extend(.navbar-default .navbar-nav > li + li > a all);
+    }
+
+    a {
+      text-transform: uppercase;
+
+      // Bootstrap
+      // NOTE: This extend rule will apply media rules as well and these will be generated 
+      // in the end of the file, making it hard to override.
+      &:extend(.nav > li > a);
+
+      // Corporate-ui
+      &:extend(.navbar-nav > li > a);
+      &:extend(.navbar-default .navbar-nav > li > a all);
+      &:extend(.navbar-default .navbar-header + .navbar-collapse .navbar-nav a all);
+
+      &.mode-toggler {
+        display: none;
+      }
+
+      // Align icons used in navigation correctly
+      span {
+        line-height: inherit;
+      }
     }
   }
 }
 
 :host-context(.app c-main-navigation) {
 
-  &:first-child a:before {
-    &:extend(.app .navbar-default .navbar-header + .navbar-collapse .navbar-nav a:first-child:before);
-  }
-  a {
-    &:extend(.app .navbar-default .navbar-header + .navbar-collapse .navbar-nav a all);
+  ::content {
+
+    &:first-child a:before {
+      &:extend(.app .navbar-default .navbar-header + .navbar-collapse .navbar-nav a:first-child:before);
+    }
+
+    a {
+      &:extend(.app .navbar-default .navbar-header + .navbar-collapse .navbar-nav a);
+    }
   }
 }
 
 :host-context(sub-navigation) {
 
-  &.active a:after {
+  &.active ::content a:after {
     &:extend(.navbar-default .navbar-header + .navbar-collapse + .navbar-collapse a.active:after);
   }
-  &:not(:first-child) a,
-  a {
-    text-transform: none;
-    padding: 15px;
 
-    // Corporate-ui
-    &:extend(.navbar-default .navbar-header + .navbar-collapse + .navbar-collapse a all);
-    &:before,
-    &:after {
-      padding: 0;
-    }
-    &:before {
-      border-left: 0;
+  ::content {
+
+    + nav-item a,
+    a {
+      text-transform: none;
+      padding: 15px;
+
+      // Corporate-ui
+      &:extend(.navbar-default .navbar-header + .navbar-collapse + .navbar-collapse a all);
+      &:before,
+      &:after {
+        padding: 0;
+      }
+      &:before {
+        display: none;
+      }
     }
   }
 }
 
 :host-context(.app sub-navigation) {
 
-  &.active a:after {
-    &:extend(.app .navbar-default .navbar-header + .navbar-collapse + .navbar-collapse a.active:after);
-  }
+  ::content {
 
-  a {
-    &:extend(.app .navbar-default .navbar-header + .navbar-collapse + .navbar-collapse a all);
-    padding-left: 15px; // Padding left and right is needed due to inheritence of main-nav is overruling sub-nav rules...
-    padding-right: 15px;
+    &.active a:after {
+      &:extend(.app .navbar-default .navbar-header + .navbar-collapse + .navbar-collapse a.active:after);
+    }
 
-    &:after {
-      padding: 0;
+    a {
+      &:extend(.app .navbar-default .navbar-header + .navbar-collapse + .navbar-collapse a all);
+      padding-left: 15px; // Padding left and right is needed due to inheritence of main-nav is overruling sub-nav rules...
+      padding-right: 15px;
+
+      &:after {
+        padding: 0;
+      }
     }
   }
 }
@@ -105,7 +129,17 @@
 
 @media (max-width: 991px) {
 
+  :host {
+    display: block;
+  }
+
   :host-context(c-main-navigation) {
+
+    ::content > a {
+      // Needed to override extended style from bootstrap core
+      padding: 10px 25px !important;
+    }
+
     .modToggler();
   }
 
@@ -113,40 +147,50 @@
     .modToggler();
   }
 
-  :host-context(.app sub-navigation) {
+  :host-context(sub-navigation) {
 
-    &:not(:first-child) a,
-    a {
-      padding: 10px 35px;
+    ::content {
+
+      > a {
+        // Needed to override extended style from bootstrap core
+        padding: 10px 35px !important;
+      }
     }
   }
 
-  :host-context(sub-navigation) {
+  :host-context(.app sub-navigation) {
 
-    &:not(:first-child) a,
-    a {
-      padding: 10px 35px;
+    ::content {
+
+      > a {
+        // Needed to override extended style from bootstrap core
+        padding: 10px 35px !important;
+      }
     }
   }
 }
 
 .modToggler() {
-  &.expanded .mode-toggler:before {
-    content: "-";
-  }
 
-  a.mode-toggler {
-    display: block;
-    position: relative;
-    z-index: 1;
-    float: right;
-    padding: 10px;
-    border: 0;
+  ::content {
 
-    &:before {
-      content: "+";
+    &.expanded .mode-toggler:before {
+      content: "-";
+    }
+
+    a.mode-toggler {
+      display: block;
+      position: relative;
+      z-index: 1;
+      float: right;
       padding: 10px;
       border: 0;
+
+      &:before {
+        content: "+";
+        padding: 10px;
+        border: 0;
+      }
     }
   }
 }
