--- a/src/views/component/Navigation/main-navigation/style.less
+++ b/src/views/component/Navigation/main-navigation/style.less
@@ -2,18 +2,10 @@
 @import (reference) "../../../../less/corporate-ui/navigation";
 
 :host {
-  display: block;
+  display: none;
   // we set height on this element dynamicly, this rule make it look smoother
   transition: height 100ms ease;
 
-  .sticky {
-    position: fixed;
-    // In ie and ff the sub-nav´s position is calculated wrong by 0.5px adding a small gap
-    // between main and sub navigation, this for some reason solves that :O
-    top: -1px;
-    left: 0;
-    right: 0;
-  }
   .navbar-footer {
     display: none;
   }
@@ -41,10 +33,46 @@
   }
 }
 
+:host-context(.app) {
+
+  // Might wanna move this to nav-item or things in nav-item here later on...
+  ::content nav-item {
+
+    &:first-child a:before {
+      padding-left: 0;
+    }
+
+    a {
+      &:extend(.app .navbar-default .navbar-header + .navbar-collapse .navbar-nav a);
+    }
+  }
+}
+
 :host-context(.header-is-sticky) {
 
-  ::content .navbar-nav.navbar-right {
-    margin-right: 80px;
+  ::content {
+
+    > .navbar {
+      position: fixed;
+      // In ie and ff the sub-nav´s position is calculated wrong by 0.5px adding a small gap
+      // between main and sub navigation, this for some reason solves that :O
+      top: -1px;
+      left: 0;
+      right: 0;
+    }
+    .navbar-nav.navbar-right {
+      margin-right: 80px;
+    }
+  }
+}
+
+:host-context(body.fullscreen) {
+
+  ::content {
+
+    .navbar-nav.navbar-right {
+      margin-right: 1px; // If we use 0 a horizontal scrollbar will be shown... :O
+    }
   }
 }
 
