--- a/src/views/component/Navigation/main-navigation/sub-navigation/style.less
+++ b/src/views/component/Navigation/main-navigation/sub-navigation/style.less
@@ -1,19 +1,32 @@
+@import (reference) "../../../../../less/corporate-ui/variables";
+@import (reference) "../../../../../less/corporate-ui/navigation";
+
 :host-context(.app) {
 
-  c-navbar {
-
-    nav-item {
-
-      a {
-        letter-spacing: .03rem;
-        line-height: 18px;
-        padding-top: 14px;
-        padding-bottom: 12px;
-      }
-    }
-  }
   .caption {
     margin-left: 0;
+  }
+
+  // This is added here to increas value of this rule, so that it overrides main-navigation
+  nav {
+
+    ::content {
+
+      nav-item {
+
+        &.active a:after {
+          &:extend(.app .navbar-default .navbar-header + .navbar-collapse + .navbar-collapse a.active:after);
+        }
+
+        a {
+          &:extend(.app .navbar-default .navbar-header + .navbar-collapse + .navbar-collapse a all);
+
+          &:after {
+            padding: 0;
+          }
+        }
+      }
+    }
   }
 }
 
@@ -43,8 +56,7 @@
     margin-left: 15px;
     margin-right: 15px;
     padding-left: 15px;
-    padding-right: 15px;
-    min-width: 169px;
+    padding-right: 30px;
     display: inline-block;
     border-right: 1px solid #e2e2e2;
   }
