--- a/src/views/component/Tables + Forms/login/index.jade
+++ b/src/views/component/Tables + Forms/login/index.jade
@@ -2,7 +2,7 @@
 extends ../../component
 
 append dependencies
-  link(rel="import" href="../../Bootstrap/form-field/form-field.html")
+  link(rel="import" href="form-field/form-field.html")
   link(rel="import" href="variation-1.html")
 
 block comment
