--- a/src/views/component/Tables + Forms/login/template.html
+++ b/src/views/component/Tables + Forms/login/template.html
@@ -1,5 +1,5 @@
 
-<div class="row">
+<div class="row public">
   <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
     <h2>{{headline}}</h2>
     <p>{{description}}</p>
