--- a/src/views/component/Tables + Forms/login/variations/1/demo.html
+++ b/src/views/component/Tables + Forms/login/variations/1/demo.html
@@ -1,5 +1,5 @@
 
   <c-login headline="Welcome to Scania" description="To log in to the resource you requested, please select your account type and submit your username and password in the form.">
-    <c-form-field type="text" name="username" label="Username"></c-form-field>
-    <c-form-field type="password" name="password" label="Password"></c-form-field>
+    <form-field type="text" name="username" label="Username"></form-field>
+    <form-field type="password" name="password" label="Password"></form-field>
   </c-login>
