--- a/src/views/templates.html
+++ b/src/views/templates.html
@@ -13,6 +13,18 @@
 
   <script src="/js/corporate-ui.js"></script>
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110069805-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-110069805-1');
+  </script>
+  
+  <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
+
   <link rel="stylesheet" href="css/ux-library.css">
 </head>
 <body class="scania ux-lib" data-env="dev" ng-controller="UxLibTemp as uxlibtemp">
@@ -41,7 +53,7 @@
     </c-main-navigation>
 
     <section class="light">
-      <div class="container">
+      <div class="container" ng-cloak>
         <h2>{{uxlibtemp.templates.name}}s</h2>
 
         <div ng-repeat="templates in uxlibtemp.templates.children" ng-if="templates.children.length != '0'" class="main-item">
