Testing Red on Cds-site for Edge

--- a/docs/ux-lib.css
+++ b/docs/ux-lib.css
@@ -1,3 +1,6 @@
+body#cds-site {
+    background-color: red !important;
+}
 
 @import url('https://static.scania.com/resources/logotype/group-brands.css');
 
