Updated URL to corporate-ui-docs

--- a/docs/component/index.html
+++ b/docs/component/index.html
@@ -10,23 +10,23 @@
 
   <title>Scania UX Library</title>
   <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
-  <script src="https://static.scania.com/build/global/2.4.1/js/corporate-ui.js"></script>
+  <script src="https://static.scania.com/build/global/2.5.0/js/corporate-ui.js"></script>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>  
-  <script src="/corporate-ui/js/google-analytics.js"></script>  
+  <script src="/corporate-ui-docs/js/google-analytics.js"></script>  
 
 
 
-  <link rel="stylesheet" href="/corporate-ui/ux-lib.css">
+  <link rel="stylesheet" href="/corporate-ui-docs/ux-lib.css">
 
   <link rel="import" href="https://static.scania.com/build/global/2.3.2/html/component/Navigation/main-hero/main-hero.html">
-  <link rel="stylesheet" href="/corporate-ui/ux-lib.css">
+  <link rel="stylesheet" href="/corporate-ui-docs/ux-lib.css">
 </head>
 
 
 <body unresolved class="scania ux-lib" ng-app="CorporateUI" ng-controller="Components as components">
 
-  <c-corporate-header site-name="UX Library" site-url="/corporate-ui/">
+  <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
     <nav-item>
       <select class="form-control input-sm hidden">
         <option selected>2.0.0</option>
@@ -42,20 +42,20 @@
 
     <c-main-navigation show-search>
       <primary-items>
-        <nav-item location="/corporate-ui/">Home</nav-item>
-        <nav-item location="/corporate-ui/styleguide/">Style Guide</nav-item>
-        <nav-item location="/corporate-ui/developer/" class="active">
+        <nav-item location="/corporate-ui-docs/">Home</nav-item>
+        <nav-item location="/corporate-ui-docs/styleguide/">Style Guide</nav-item>
+        <nav-item location="/corporate-ui-docs/developer/" class="active">
           Web Applications
           <sub-navigation caption="Web Applications">
-            <nav-item location="/corporate-ui/developer/">Corporate UI</nav-item>
-            <nav-item location="/corporate-ui/component/" class="active">Available Components</nav-item>
-            <nav-item location="/corporate-ui/template/">Templates</nav-item>
-            <nav-item location="/corporate-ui/developer/caching.html">Caching</nav-item>
-            <nav-item location="/corporate-ui/developer/scania-bootstrap.html">Scania Bootstrap</nav-item>
-            <nav-item location="/corporate-ui/developer/support.html">Support</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/">Corporate UI</nav-item>
+            <nav-item location="/corporate-ui-docs/component/" class="active">Available Components</nav-item>
+            <nav-item location="/corporate-ui-docs/template/">Templates</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/caching.html">Caching</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/scania-bootstrap.html">Scania Bootstrap</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/support.html">Support</nav-item>
           </sub-navigation>
         </nav-item>
-        <nav-item location="/corporate-ui/mobile-apps/">Mobile Apps</nav-item>        
+        <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps</nav-item>        
       </primary-items>
     </c-main-navigation>
 
@@ -81,7 +81,7 @@
 
   <c-corporate-footer></c-corporate-footer>
 
-  <script src="/corporate-ui/ux-lib.js"></script>
+  <script src="/corporate-ui-docs/ux-lib.js"></script>
 
    <script src="//static.scania.com/vendors/frameworks/angular/1.5.5/angular.min.js"></script>
 </body>
