--- a/docs/component/inline-editor/inline-editor.html
+++ b/docs/component/inline-editor/inline-editor.html
@@ -9,15 +9,15 @@
 
 	<script src="https://static.scania.com/resources/logotype/favicon/favicons.js"></script>
 
-	<script src="https://static.scania.com/build/global/2.4.1/js/corporate-ui.js"></script>
+	<script src="https://static.scania.com/build/global/2.5.0/js/corporate-ui.js"></script>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>  
-  <script src="/corporate-ui/js/google-analytics.js"></script>  
+  <script src="/corporate-ui-docs/js/google-analytics.js"></script>  
 
-  <script src="https://static.scania.com/build/global/2.4.1/js/corporate-ui.js"></script>
+  <script src="https://static.scania.com/build/global/2.5.0/js/corporate-ui.js"></script>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>  
-  <script src="/corporate-ui/js/google-analytics.js"></script>  
+  <script src="/corporate-ui-docs/js/google-analytics.js"></script>  
 
          
 
@@ -76,13 +76,13 @@
 
 	</style>
 
-  	<link rel="stylesheet" href="/corporate-ui/ux-lib.css">
+  	<link rel="stylesheet" href="/corporate-ui-docs/ux-lib.css">
 
 </head>
 <body class="scania">
 
 
-	<c-corporate-header site-name="Edit document" site-url="/corporate-ui/">
+	<c-corporate-header site-name="Edit document" site-url="/corporate-ui-docs/">
 		<nav-item location="#" class="spinner">Save</nav-item>
 		<nav-item location="start.html" class="exit">Exit</nav-item>
 	</c-corporate-header>
@@ -171,7 +171,7 @@
 
 
 
-  		<script src="/corporate-ui/ux-lib.js"></script>
+  		<script src="/corporate-ui-docs/ux-lib.js"></script>
 	</body>
 	</html>
 
