--- a/docs/component/polymer-documentation.html
+++ b/docs/component/polymer-documentation.html
@@ -4,20 +4,20 @@
 	<title>UX LIBRARY - Polymer Documentation</title>
   <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
 
-	<script src="https://static.scania.com/build/global/2.4.1/js/corporate-ui.js"></script>
+	<script src="https://static.scania.com/build/global/2.5.0/js/corporate-ui.js"></script>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>  
-  <script src="/corporate-ui/js/google-analytics.js"></script>  
+  <script src="/corporate-ui-docs/js/google-analytics.js"></script>  
 
-  <script src="https://static.scania.com/build/global/2.4.1/js/corporate-ui.js"></script>
+  <script src="https://static.scania.com/build/global/2.5.0/js/corporate-ui.js"></script>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>  
-  <script src="/corporate-ui/js/google-analytics.js"></script>  
+  <script src="/corporate-ui-docs/js/google-analytics.js"></script>  
 
 
 	<link rel="import" href="https://static.scania.com/build/global/beta2/html/Navigation/main-hero/main-hero.html">
 
-  <link rel="stylesheet" href="/corporate-ui/ux-lib.css">
+  <link rel="stylesheet" href="/corporate-ui-docs/ux-lib.css">
 </head>
 
 <style>
@@ -186,7 +186,7 @@
 
 	<corporate-footer></corporate-footer>
 
-	  <script src="/corporate-ui/ux-lib.js"></script>
+	  <script src="/corporate-ui-docs/ux-lib.js"></script>
 </body>
 
 </html>
