--- a/docs/design-patterns/components/formControlsStripped.html
+++ b/docs/design-patterns/components/formControlsStripped.html
@@ -19,10 +19,10 @@
 
 
         <script src="https://static.scania.com/vendors/frameworks/jQuery/1.11.3/jquery-1.11.3.min.js"></script>   
-        <script src="https://static.scania.com/build/global/2.4.1/js/corporate-ui.js"></script>
+        <script src="https://static.scania.com/build/global/2.5.0/js/corporate-ui.js"></script>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>  
-  <script src="/corporate-ui/js/google-analytics.js"></script>  
+  <script src="/corporate-ui-docs/js/google-analytics.js"></script>  
 
        
         <script src="https://static.scania.com/vendors/components/jQuery/select2/4.0.0/js/select2.full.min.js"></script>  
@@ -44,7 +44,7 @@
     </head>
     <body class="scania">
 
-  <c-corporate-header site-name="UX Library" site-url="/corporate-ui/">
+  <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
     <nav-item location="https://www.scania.com/ux-library/">UX Library</nav-item>
     <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
   </c-corporate-header>
